--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-<html><body><h1>Mi Portafolio</h1></body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Portafolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 2rem;
+        }
+        nav {
+            background-color: #34495e;
+            padding: 1rem;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-size: 1.1rem;
+        }
+        nav a:hover {
+            color: #3498db;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        .section {
+            margin-bottom: 2rem;
+            background-color: white;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .project {
+            margin-bottom: 1.5rem;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Mi Portafolio</h1>
+        <p>Bienvenido a mi trabajo y proyectos</p>
+    </header>
+    <nav>
+        <a href="#sobre-mi">Sobre Mí</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contacto">Contacto</a>
+    </nav>
+    <div class="container">
+        <section id="sobre-mi" class="section">
+            <h2>Sobre Mí</h2>
+            <p>Soy [tu nombre], un apasionado por [tu área o profesión, e.g., diseño, programación, etc.]. Tengo experiencia en [menciona habilidades o herramientas clave], y me encanta crear soluciones innovadoras.</p>
+        </section>
+        <section id="proyectos" class="section">
+            <h2>Proyectos Destacados</h2>
+            <div class="project">
+                <h3>Proyecto 1</h3>
+                <p>Descripción breve del proyecto. Usé [tecnologías o habilidades] para [lograr algo].</p>
+            </div>
+            <div class="project">
+                <h3>Proyecto 2</h3>
+                <p>Descripción breve del segundo proyecto. Incluye detalles interesantes y tecnologías usadas.</p>
+            </div>
+        </section>
+        <section id="contacto" class="section">
+            <h2>Contacto</h2>
+            <p>Puedes contactarme en: [tu correo, redes sociales, o enlaces relevantes]. ¡Estoy abierto a nuevas oportunidades!</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2025 [Tu Nombre]. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
